<resources>
    <string name="app_name">Merka</string>
    <string name="label_powered_by">Desarrollada por:\n Webster Inc</string>

    <!-- Splash Screen Strings -->
    <string name="label_mock_splash">Splash Screen</string>
    <string name="facebook_app_id">183910015959438</string>


    <!-- City Screen Strings -->
    <string name="label_check_remember_city">Recordar esta ciudad</string>
    <string name="label_select_city">Seleccione su ciudad</string>
    <string name="button_text_done">Continuar</string>
    <string name="button_text_ok">Listo</string>

    <string name="hint_input_whatsapp">WhatsApp</string>
    <string name="hint_input_facebook">Ingresar perfil de facebook</string>
    <string name="hint_input_instagram">Instagram</string>
    <string name="hint_input_web_page">Página web</string>
    <string name="hint_label_facebook">Facebook</string>

    <string name="label_create_category">Crear categoría</string>
    <string name="label_create_commerce">Crear negocio</string>
    <string name="label_validate_commerces">Validar negocios</string>
    <string name="label_confirm_validate_commerces">¿Desea validar el comercio?</string>
    <string name="label_validate">Validar</string>
    <string name="label_create_emergency">Crear emergencia</string>
    <string name="label_update_emergency">Actualizar emergencia</string>
    <string name="label_update_emergency_success">La emergencia ha sido actualizada</string>
    <string name="label_edit_emergency">Editar emergencias</string>
    <string name="label_location_commerce">Ubicación</string>
    <string name="label_location_message">Para registrar el negocio se requiere estar en la ubicación exacta, es importante para la búsqueda del mismo. ¿Actualmente se encuentra ubicado en el negocio?</string>
    <string name="label_create_city">Crear ciudad</string>
    <string name="label_edit_commerce">Editar negocio</string>
    <string name="label_edit_deal">Editar promoción</string>
    <string name="label_delete_deal">Eliminar promoción</string>
    <string name="label_promo_commerce">promociónar</string>
    <string name="label_delete_commerce">Eliminar negocio</string>
    <string name="label_delete">Eliminar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_edit_category">Editar categoría</string>
    <string name="label_admin_commerce">Mis negocios</string>
    <string name="label_admin_deals">promociones</string>
    <string name="label_admin_rate">Calificar</string>
    <string name="label_create_deal">Crear promoción</string>
    <string name="label_update_deal">Actualizar promoción</string>
    <string name="label_update_category">Actualizar categoría</string>
    <string name="label_go_commerce">Ir al negocio -></string>


    <string name="label_hint_commerce_name">Nombre del negocio</string>
    <string name="label_hint_emergency_number">Numero de emergencia</string>
    <string name="label_hint_dial_number">Numero de cuadrante</string>
    <string name="label_hint_whatsapp">Numero de whatsapp</string>
    <string name="label_hint_city_name">Nombre de la ciudad</string>
    <string name="label_hint_category_name">Nombre de la categoría</string>
    <string name="label_hint_deal_name">Nombre de la promoción</string>
    <string name="label_hint_deal_price">Precio del producto</string>
    <string name="label_hint_commerce_description">Descripción</string>
    <string name="label_hint_commerce_address">Dirección</string>
    <string name="label_hint_commerce_location">Ubicacion</string>
    <string name="label_hint_commerce_comments">Comentarios</string>

    <!-- Home Screen Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lo buscas? Lo encuentras!</string>
    <string name="nav_header_subtitle">El directorio comercial y de servicios 2019</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Side Menu Strings-->
    <string name="side_menu_item_commerces_own">Mis negocios</string>
    <string name="side_menu_item_commerces">Negocios</string>
    <string name="side_menu_item_menu">Menú</string>
    <string name="side_menu_item_category">Categorías</string>
    <string name="side_menu_item_deal">promociones</string>
    <string name="side_menu_item_emergency">Emergencias</string>
    <string name="side_menu_item_interesting_places">Sitios de interes</string>
    <string name="side_menu_item_about">Acerca</string>
    <string name="side_menu_item_contact_us">Contáctanos</string>
    <string name="side_menu_item_communicate">Difusión</string>
    <string name="side_menu_item_share">Compartir</string>
    <string name="side_menu_item_change_city">Cambiar ciudad</string>
    <string name="side_menu_item_log_out">Cerrar sesión</string>

    <string name="label_hint_name_last_name">Nombre y Apellidos</string>
    <string name="label_hint_name">Nombre</string>
    <string name="label_hint_company">Negocio</string>
    <string name="label_hint_phone">Teléfono</string>
    <string name="label_hint_email">Correo electrónico</string>
    <string name="label_hint_comments">Comentarios</string>
    <string name="label_hint_password">Contraseña</string>
    <string name="label_hint_validate_password">Validar Contraseña</string>
    <string name="label_admin_screen">Opciones Admin</string>
    <string name="label_button_sign_up">Registrarse</string>
    <string name="label_button_guest">Invitado</string>
    <string name="label_no_have_account">No tienes cuenta?</string>
    <string name="label_have_account">ya tienes cuenta?</string>
    <string name="label_log_in_or_connect_with">ó inicia con</string>
    <string name="label_like_guest">ó como</string>
    <string name="label_google">Google</string>
    <string name="label_see_more"><u>ver mas</u></string>
    <string name="label_see_less"><u>ver menos</u></string>
    <string name="label_accept">Aceptar</string>
    <string name="label_privacy_policy">Al usar Merka, acepta nuestra <a href="privacy:">política de privacidad</a> y los <a href="terms:">términos y condiciones</a>.</string>

    <string name="label_send">Enviar</string>

    <string name="message_created_commerce_success">Estimado usuario:\nSu registro ha sido completado.\nEn un termino no mayor a 24 horas, se dará por aprobado su negocio si cumple con nuestros términos y políticas de privacidad.</string>
    <string name="message_created_category_success">Se ha creado su categoría</string>
    <string name="message_updated_commerce_success">Se ha actualizado su negocio</string>
    <string name="message_updated_category_success">Se ha actualizado su categoría</string>
    <string name="message_error_created_commerce_success">Error al crear su negocio</string>
    <string name="message_error_created_category">Error al crear su categoría</string>
    <string name="message_error_update_category">Error al actualizar su categoría</string>
    <string name="message_error_updated_commerce_success">Error al actualizar su negocio</string>
    <string name="message_created_emergency_success">Se ha creado nueva emergencia</string>
    <string name="message_created_deal_success">Se ha creado la promoción</string>
    <string name="message_create_deal_error">Hubo un error al crear la promoción</string>

    <!-- Commerces Fragment String -->
    <string name="transition_name_commerce">transition_commerce</string>
    <string name="message_about">Merka es una App que busca acercar al usuario e interactuar en tiempo
real con los Negocios, entorno a novedades de tipo ofertas, descuentos y cualquier actividad comercial por parte de los negocios de la región.\n\nCuenta con características sencillas y funcionales a nivel de usuario y negocio registrado:</string>
    <string name="message_about_list">
        <b>Usuario:</b>\n\n
        \t\t-\t\tVisualiza cada uno de los establecimientos\n\t\t\t\tcomerciales registrados.\n
        \t\t-\t\tVisualiza promociones y ofertas.\n
        \t\t-\t\tRecibe notificaciones.\n
        \t\t-\t\tVisualiza y contacta entidades de emergencias.\n
        \t\t-\t\tCambia lugar de búsqueda (ciudad).\n
        \t\t-\t\tRegistra negocio.\n\n
        <b>Negocio:</b>\n\n
        \t\t-\t\tVisualiza cada uno de los negocios registrados.\n
        \t\t-\t\tEdita negocio propio sin ayuda de tercero.\n
        \t\t-\t\tVisualiza y edita promociones y ofertas.\n
        \t\t-\t\tCrea, edita, publica promociones y notificaciones.\n
        \t\t-\t\tVisualiza y contacta entidades de emergencias.\n
        \t\t-\t\tCambia lugar de búsqueda (ciudad).\n
    </string>
    <string name="message_about_follow">Sencillo, en Merka \"lo buscas, lo encuentras\"\n\nSíguenos</string>
    <string name="message_about_copyright">Copyrigth © Webster Inc. 2020 | Todos los derechos reservados.</string>
    <string name="default_notification_channel_id" translatable="false"> default_cahnel </string>
    <string name="send_notification">Send Notification</string>
    <string name="title">Title</string>
    <string name="actualizar">Actualizar</string>
    <string name="label_update_commerce">UPDATE COMMERCE</string>
    <string name="label_create_commerce_banner_image">Imagen para banner de negocio</string>
    <string name="label_create_deal_banner_image">Imagen para promoción</string>
    <string name="label_create_commerce_internal_image">Imagenes representativas del negocio</string>
    <string name="label_selected_city">Seleccione una ciudad</string>
    <string name="label_selected_emergency">Seleccione tipo de emergencia</string>
    <string name="label_selected_category">Seleccione una categoría</string>

    <string name="message_city_created_success">La ciudad fue creada</string>
    <string name="message_commerces_allowed">Solo se permite crear dos negocios</string>
    <string name="message_edit_commerce_dialog">¿Que desea hacer con su negocio?</string>
    <string name="message_edit_deal_dialog">¿Que desea hacer con su promoción?</string>
    <string name="message_delete_commerce_dialog">¿Desea eliminar su negocio?</string>
    <string name="message_delete_deal_dialog">¿Desea eliminar su promoción?</string>
    <string name="message_verify_email">Enviamos un enlace de verificacion al correo registrado</string>
    <string name="label_search_category">Buscar categoría</string>
    <string name="label_login">Iniciar sesión</string>

    <string name="error_input_name">Ingrese un nombre válido</string>
    <string name="error_input_email">Ingrese un correo válido</string>
    <string name="error_input_email_in_use">El correo electrónico ya está registrado</string>
    <string name="error_input_email_not_found">El correo electrónico no esta registrado</string>
    <string name="error_input_email_not_verified">El correo electrónico no esta verificado</string>
    <string name="error_input_phone">Ingrese un teléfono válido</string>
    <string name="error_input_password">La contraseña debe contener mínimo 5 caracteres</string>
    <string name="error_input_wrong_password">La contraseña incorrecta</string>
    <string name="error_input_validate_password">Las contraseñas no coinciden</string>
    <string name="error_input_too_many_requests">Demasiados intentos con contraseña incorrecta, espera unos minutos e intenta de nuevo</string>
    <string name="error_action_no_facebook">No tiene instalado facebook</string>
    <string name="error_action_no_instagram">No tiene instalado instagram</string>
    <string name="error_action_no_whatsapp">No tiene instalado whatsapp</string>
    <string name="title_activity_maps">Map</string>
</resources>
