<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_commerces"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/side_menu_item_commerces" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/side_menu_item_category" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/side_menu_item_about" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_contact_us"
            android:title="@string/side_menu_item_contact_us" />
    </group>

    <item android:title="@string/side_menu_item_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/side_menu_item_share" />
        </menu>
    </item>
</menu>
