<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_select_city"
        android:textColor="@color/material_black" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/background_spinner" />

    <CheckBox
        android:id="@+id/checkBoxRememberCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/label_check_remember_city" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_text_ok"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_admin_screen"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_create_commerce"
        android:textAllCaps="false"
        android:visibility="gone" />
</LinearLayout>