<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xx_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/bg_rounded_white"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textNameLastName"
            style="@style/EditTextPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint_name_last_name"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textCompany"
            style="@style/EditTextPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/label_hint_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameLastName" />


        <EditText
            android:id="@+id/textPhone"
            style="@style/EditTextPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/label_hint_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCompany" />

        <EditText
            android:id="@+id/textEmail"
            style="@style/EditTextPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/label_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPhone" />

        <EditText
            android:id="@+id/textComments"
            style="@style/EditTextPurple"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="start"
            android:hint="@string/label_hint_comments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/buttonSendForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/label_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>